--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,18 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: -apple-system, BlinkMacSystemFont,"Courier New", "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+background: linear-gradient(89deg, #f572d5, #ff71a9, #ff8679, #ffaa4e, #ffcf36, #ffcf33, #ffcf31, #ffcf2e, #ffa845, #ff7f71, #ff63a5, #ff64d8);
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+button{
+  cursor: pointer;
 }
